--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -5,5 +5,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=postgres
-spring.datasource.password=trier
+spring.datasource.password=postgres
 
