--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=postgres
-spring.datasource.password=trier
+spring.datasource.password=postgres
 
